--- a/src/Components/TopDestinations/TopDestinations.module.css
+++ b/src/Components/TopDestinations/TopDestinations.module.css
@@ -1,65 +1,57 @@
 .outer {
-    width: 90%;
-    margin: auto;
+  width: 90%;
+  margin: auto;
 }
 
-
-
 .container {
-    display: flex;
-    gap: 20px;
-    overflow-y: scroll;
-    margin-bottom: 20px;
+  display: flex;
+  gap: 20px;
+  overflow-y: scroll;
+  margin-bottom: 20px;
 }
 
 .container::-webkit-scrollbar {
-    width: 0;
+  width: 0;
 }
-
-
 
 .box {
-    min-width: 33%;
+  min-width: 33%;
 
-    position: relative;
+  position: relative;
 }
 
-.box>img {
-    max-width: 100%;
-    max-height: 100%;
+.box > img {
+  max-width: 100%;
+  max-height: 100%;
 }
 
-.box>img:hover {
-    opacity: .8;
-    cursor: pointer;
+.box > img:hover {
+  opacity: 0.8;
+  cursor: pointer;
 }
 
-.box>div {
-    padding-left: 20px;
-    line-height: 2.2em;
-
-
+.box > div {
+  padding-left: 20px;
+  line-height: 2.2em;
 }
 
-.box>div>p {
-    padding-bottom: 20px;
-    font-size: 2vw;
-    font-weight: 700;
-    text-shadow: 10px 10px 50px #000000;
-    color: white;
-    position: absolute;
-    transform: translateY(-100%);
+.box > div > p {
+  padding-bottom: 20px;
+  font-size: 2vw;
+  font-weight: 700;
+  text-shadow: 10px 10px 50px #000000;
+  color: white;
+  position: absolute;
+  transform: translateY(-100%);
 }
 
-@media (min-width: 1024px)
-{
+@media (min-width: 1024px) {
   .outer {
     padding: 0 24px;
   }
 }
 
-@media (min-width: 1184px)
-{
+@media (min-width: 1184px) {
   .outer {
     padding: 0 24px;
     box-sizing: border-box;
@@ -70,8 +62,7 @@
   }
 }
 
-@media (max-width: 768px)
-{
+@media (max-width: 768px) {
   .outer {
     width: 768px;
     padding: 0 10px;
