--- a/src/Components/Header/NavbarTop.module.css
+++ b/src/Components/Header/NavbarTop.module.css
@@ -2,7 +2,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  /* width: 60%; */
+  width: 90%;
   margin: auto;
   position: static;
   top: 0px;
@@ -69,7 +69,15 @@
 @media (min-width: 1024px)
 {
   .container {
-    padding: 0px 0px;
+    /* padding: 0px 0px; */
+  }
+}
+
+@media (max-width: 1024px)
+{
+  .navText {
+    display: none;
+    padding: 8px 0;
   }
 }
 
@@ -88,7 +96,7 @@
 @media (max-width: 768px)
 {
   .container {
-    width: 768px;
-    padding: 0 10px;
+    /* width: 768px; */
+    padding: 8px 10px;
   }
 }
