--- a/src/Components/Search.module.css
+++ b/src/Components/Search.module.css
@@ -1,74 +1,72 @@
-*{
-    box-sizing: border-box;
+* {
+  box-sizing: border-box;
 }
 
-@media (min-width: 1024px)
-{
+.container {
+  width: 90%;
+  margin: auto;
+  position: relative;
+  background-color: #fcc;
+  align-items: center;
+}
+
+@media (min-width: 1024px) {
   .container {
     /* padding: 0 24px; */
   }
 }
 
-@media (min-width: 1184px)
-{
+@media (min-width: 1184px) {
   .container {
     /* padding: 0 24px; */
     box-sizing: border-box;
     margin: auto;
     max-width: 100%;
-    padding: 0 0px;
     width: calc(1136px + 0px * 2);
   }
 }
 
-@media (max-width: 768px)
-{
+@media (max-width: 768px) {
   .container {
-    width: 768px;
-    padding: 0 10px;
+    width: 90%;
+    /* padding: 0 24px; */
   }
 }
 
-.container{
-    /* width: 90%; */
-    margin: auto;
-    position: relative;
-    background-color: #fcc;
-    align-items: center;
+
+.container > img {
+  width: 100%;
+  height: 100%;
 }
-.container>img{
-    width: 100%;
-    height: 100%;
-   
-}
-.container>div{
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    display: flex;
-    border: 1px solid white;
-    width: 60%;
-    padding: 7px 20px;
-    border-radius: 30px;
-    align-items: center;
-    background-color: white;
-    font-size: 1.5em;
-    box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
+.container > div {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: flex;
+  border: 1px solid white;
+  width: 60%;
+  padding: 7px 20px;
+  border-radius: 30px;
+  align-items: center;
+  background-color: white;
+  font-size: 1.5em;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
+    rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
 }
 
-.container>div>div+div{
-   
-    width: 100%;
+.container > div > div + div {
+  width: 100%;
 }
-.container>div>div{
-    display: flex;
+.container > div > div {
+  display: flex;
 }
-.container input[type="text"], textarea{
-    width: 100%;
-    padding: 7px 20px;
-    border-radius: 30px;
-    border: none;
-    outline: none;
-    font-size: .8em;
+.container input[type="text"],
+textarea {
+  width: 100%;
+  padding: 7px 20px;
+  border-radius: 30px;
+  border: none;
+  outline: none;
+  font-size: 0.8em;
 }
