--- a/src/Components/ExplorePictureSection/ExplorePicture.module.css
+++ b/src/Components/ExplorePictureSection/ExplorePicture.module.css
@@ -50,11 +50,48 @@
 }
 
 .slideText {
-  color: white;
-  position: absolute;
+  margin: 5px 0;
+  color: black;
+  /* position: absolute; */
   font-weight: bold;
-  font-size: 28px;
+  font-size: 16px;
   bottom: 10px;
-  left: 10px;
   z-index: 2;
+}
+
+.rateMask {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: 20;
+  opacity: 0;
+}
+
+.rateText {
+  font-size: 12px;
+  padding: 4px 5px 0;
+}
+
+.rateArea {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+}
+
+.heartBtn {
+  color: black;
+  background-color: rgba(255, 255, 255, 1);
+  transition: 0.2s;
+  border-radius: 50%;
+  font-size: 18px;
+  position: absolute;
+  right: 5px;
+  top: 5px;
+  z-index: 1;
+  padding: 10px 10px 5px 11px
+}
+
+.heartBtn:hover {
+  background-color: rgba(255, 255, 255, 0.9);
+  transition: 0.2s;
 }
