--- a/src/Components/ItinerariesSection/Itineraries.module.css
+++ b/src/Components/ItinerariesSection/Itineraries.module.css
@@ -25,7 +25,7 @@
 }
 
 .box>div {
-  text-align: center;
+  /* text-align: center; */
 }
 
 .box>div>img {
@@ -37,8 +37,8 @@
 }
 
 .box>div+div {
-  padding: 20px;
-  line-height: 2em;
+  padding: 20px 0;
+  line-height: 24px;
 }
 
 .box>div+div p {
