--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,19 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+
+.ReactModalPortal {
+  position: fixed;
+  background: rgba(0,0,0,0.5);
+  height: 100vh;
+  width: 100vw;
+  top: 0;
+  z-index: 100;
+}
+
+.ReactModal__Overlay {
+  position: unset !important;
+  inset: none !important;
+  background-color: transparent !important;
+}
